// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow map contains an unexpected : 1`] = `
"Flow map contains an unexpected :
1 | {·:·:·}¶
  | ^^^^^^^"
`;

exports[`Flow map contains an unexpected ? 1`] = `
"Flow map contains an unexpected ?
1 | {·:·?·}¶
  | ^^^^^^^"
`;

exports[`Flow map contains an unexpected ? 2`] = `
"Flow map contains an unexpected ?
1 | {·?·?·}¶
  | ^^^^^^^"
`;

exports[`Flow map contains an unexpected ] 1`] = `
"Flow map contains an unexpected ]
1 | {]¶
  | ^^"
`;
